Development: Add a single-node Kafka and repair the embedded broker
A business service may report BPMS events by Kafka instead of the REST API. For testing
that path a single-node broker in KRaft mode is part of the docker-compose now, and the
cockpit's profile 'kafka' names it as its bootstrap server.

The simulation service's own embedded broker never started under KRaft: pinning its port
by overriding 'listeners' dropped the controller listener a node in combined mode
requires, and renaming the client listener broke the test kit's lookup of the bound port
afterwards. It uses the test kit's listener names now and adds the controller listener,
which keeps the fixed port 9092 - and that is what makes the broker reachable by the
cockpit running in another process.

The embedded broker stays switched on by default, so reporting by Kafka needs no Kafka
installation at all. '-Dkafka.embedded=false' switches it off to use the broker of the
docker-compose instead.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
(cherry picked from commit 03e38ab7399010b8c16f34fa8e781b3c850d9193)